--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -67,7 +67,10 @@
   .app-name {
     font-size: 56rpx;
     font-weight: 900;
-    color: #633E1D;
+    background: linear-gradient(to right, #5D4037 0%, #E89F71 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    letter-spacing: -0.05em;
     margin-left: -16rpx;
   }
 }
